--- a/index.html
+++ b/index.html
@@ -21,13 +21,13 @@
             <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav">
                     <li class="nav-item active">
-                        <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
+                        <a class="nav-link" href="index.html">Home <span class="sr-only">(current)</span></a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">Projects</a>
+                        <a class="nav-link" href="https://github.com/kasturipratik">Projects</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">Contact</a>
+                        <a class="nav-link" href="https://www.linkedin.com/in/pratikparajuli">Contact</a>
                     </li>
 
                 </ul>
@@ -52,13 +52,13 @@
                 </div>
                 <div class="row mt-4">
                    <div class=" col-sm-12 col-md-4" align="center" >
-                       <h6 class="text-success">Email:<span class="text-primary">pratik.parajuli@yahoo.com</span></h6>
+                       <h6 class="text-success">Email:<span class="text-primary"> pratik.parajuli@yahoo.com</span></h6>
                    </div>
                     <div class=" col-sm-12 col-md-4" align="center" >
-                        <h6 class="text-success">Github: <a href="https://github.com/kasturipratik" class="atag" target="_blank">https://github.com/kasturipratik</a></h6>
+                        <h6 class=""> <a href="https://github.com/kasturipratik" class="atag text-success" target="_blank">GitHub</a></h6>
                     </div>
                     <div class=" col-sm-12 col-md-4"  align="center">
-                        <h6 class="text-success">LinkedIn: <a href="https://www.linkedin.com/in/pratikparajuli" class="atag " target="_blank">https://www.linkedin.com/in/pratikparajuli</a></h6>
+                        <h6 class=""> <a href="https://www.linkedin.com/in/pratikparajuli" class="atag text-success " target="_blank">LinkedIn</a></h6>
                     </div>
                 </div>
 
