--- a/index.html
+++ b/index.html
@@ -14,20 +14,20 @@
 <div class="container ">
     <!--navigation bar-->
         <nav class="navbar navbar-expand-lg navbar-dark bg-success">
-            <a class="navbar-brand" href="#">Portfolio</a>
+            <a class="navbar-brand fontOne " href="index.html">Portfolio</a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
             <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav">
-                    <li class="nav-item active">
-                        <a class="nav-link" href="index.html">Home <span class="sr-only">(current)</span></a>
+                    <li class="nav-item active fontOne">
+                        <a class="nav-link  href="index.html">Home <span class="sr-only">(current)</span></a>
                     </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="https://github.com/kasturipratik">Projects</a>
+                    <li class="nav-item fontOne">
+                        <a class="nav-link" href="https://github.com/kasturipratik" target="_blank">Projects</a>
                     </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="https://www.linkedin.com/in/pratikparajuli">Contact</a>
+                    <li class="nav-item fontOne">
+                        <a class="nav-link" href="https://www.linkedin.com/in/pratikparajuli" target="_blank">Contact</a>
                     </li>
 
                 </ul>
@@ -52,13 +52,13 @@
                 </div>
                 <div class="row mt-4">
                    <div class=" col-sm-12 col-md-4" align="center" >
-                       <h6 class="text-success">Email:<span class="text-primary"> pratik.parajuli@yahoo.com</span></h6>
+                       <h5 class="text-success fontOne">Email:<span class="text-primary"> pratik.parajuli@yahoo.com</span></h5>
                    </div>
                     <div class=" col-sm-12 col-md-4" align="center" >
-                        <h6 class=""> <a href="https://github.com/kasturipratik" class="atag text-success" target="_blank">GitHub</a></h6>
+                        <h5 class="fontOne"> <a href="https://github.com/kasturipratik" class="atag text-success" target="_blank">GitHub</a></h5>
                     </div>
                     <div class=" col-sm-12 col-md-4"  align="center">
-                        <h6 class=""> <a href="https://www.linkedin.com/in/pratikparajuli" class="atag text-success " target="_blank">LinkedIn</a></h6>
+                        <h5 class="fontOne"> <a href="https://www.linkedin.com/in/pratikparajuli" class="atag text-success " target="_blank">LinkedIn</a></h5>
                     </div>
                 </div>
 
@@ -70,11 +70,11 @@
 
             <!--start of summary-------------------------------------->
                 <div class=" row bg-light ">
-                    <div class="col-sm-12 col-md-3" align="center">
+                    <div class="col-sm-12 col-md-3 p-3" align="center">
                         <h3>Summary</h3>
 
                     </div>
-                    <div class="col-sm-12 col-md-9 bgColor ">
+                    <div class="col-sm-12 col-md-9 bgColor  p-3">
                         <p class="summary">I recently graduated from University of Maryland, Baltimore County with a B.S. degree in Computer
                             Information Systems. I am training to be a Java Developer through a 10 weeks long Java Development
                             Boot Camp at Montgomery College Business Training Center.
@@ -86,31 +86,31 @@
 
             <!--start of education------------------------>
                 <div class=" row">
-                    <div class="col-sm-12 col-md-3 bg-light" align="center">
-                        <h3>Education</h3>
+                    <div class="col-sm-12 col-md-3 bg-light p-3" align="center">
+                        <h3 class="fontOne">Education</h3>
                     </div>
-                    <div class="col-sm-12 col-md-9 bgColor ">
+                    <div class="col-sm-12 col-md-9 bgColor p-3">
                         <div class="row p-2">
                              <div class="col-sm-8">
-                                 <h5>University of Maryland at Baltimore County </h5>
+                                 <h5 class="fontOne">University of Maryland at Baltimore County </h5>
                                  <p  class="summary">B.S. in Computer Information Systems</p>
                              </div>
                              <div class="col-sm-4">
-                                <h5>Baltimore, MD
+                                <h5 class="fontOne">Baltimore, MD
                                 </h5>
                                 <p  class="summary"> May, 2018
                                 </p>
                             </div>
                         </div>
-                        <div class="row   ">
+                        <div class="row ">
                             <div class="col-sm-8">
-                                <h5>Montgomery College Business Training Center	</h5>
+                                <h5 class="fontOne">Montgomery College Business Training Center	</h5>
                                 <p  class="summary">Code Work Academy - 8 week Java Bootcamp	<br>
                                     (Core JAVA, Spring Boot, HTML, CSS, Bootstrap, Javascript)
                                 </p>
                             </div>
                             <div class="col-sm-4">
-                                <h5> Gaithersburg, MD
+                                <h5 class="fontOne"> Gaithersburg, MD
 
                                 </h5>
                                 <p  class="summary">    Expected ( 25 July 2018)
@@ -120,11 +120,11 @@
                         </div>
                         <div class="row   ">
                             <div class="col-sm-8">
-                                <h5>Community College Of baltimore County </h5>
+                                <h5 class="fontOne">Community College Of baltimore County </h5>
                                 <p  class="summary">Computer Science</p>
                             </div>
                             <div class="col-sm-4">
-                                <h5>Baltimore, MD
+                                <h5 class="fontOne">Baltimore, MD
                                 </h5>
                                 <p  class="summary">   Dec 2015
                                 </p>
@@ -135,20 +135,20 @@
             <div class="clearfix"><hr></div>
         <!--start of project ------------------------------>
                 <div class=" row">
-                    <div class="col-sm-12 col-md-3 bg-light" align="center" >
+                    <div class="col-sm-12 col-md-3 bg-light p-3" align="center" >
                         <h3>Skills</h3>
 
                     </div>
-                    <div class="col-sm-12 col-md-9 bgColor">
-                        <ul>
-                            <li><strong>Programming Languages :</strong> Java, JavaScript, PHP, SQL, PlSQL, C++</li>
-                            <li><strong>Software : </strong> Intellij, Git, GitHub, Eclipse, Oracle SQL Developer</li>
-                            <li><strong>Design and Graphics : </strong>HTML, CSS, BootStrap, Photoshop, Dreamweaver</li>
-                            <li><strong>Musical Instruments : </strong> Guitar, Drum</li>
-                            <li><strong> Multilingual: </strong> English, Nepali, Hindi, Urdu</li>
+                    <div class="col-sm-12 col-md-9 bgColor p-3">
+
+                            <h5><strong class="fontOne">Programming Languages :</strong> Java, JavaScript, PHP, SQL, PlSQL, C++</h5>
+                            <h5><strong class="fontOne">Software : </strong> Intellij, Git, GitHub, Eclipse, Oracle SQL Developer</h5>
+                            <h5><strong class="fontOne">Design and Graphics : </strong>HTML, CSS, BootStrap, Photoshop, Dreamweaver</h5>
+                            <h5><strong class="fontOne">Musical Instruments : </strong> Guitar, Drum</h5>
+                            <h5><strong class="fontOne"> Multilingual: </strong> English, Nepali, Hindi, Urdu</h5>
 
 
-                        </ul>
+
 
                     </div>
 
@@ -157,14 +157,14 @@
          <!--Start of Work Experience---------------------------------------->
             <div class=" row mb-4 ">
 
-                <div class="col-sm-12 col-md-3 bg-light" align="center">
+                <div class="col-sm-12 col-md-3 bg-light p-3" align="center">
                     <h3>Work Experience</h3>
                 </div>
 
-                <div class="col-sm-12 col-md-9 bgColor ">
+                <div class="col-sm-12 col-md-9 bgColor p-3 ">
                     <div class="row p-2">
                         <div class="col-sm-8">
-                            <h5>Baltimore Robotics Center </h5>
+                            <h5 class="fontOne">Baltimore Robotics Center </h5>
                             <p class="summary">STEM Coach</p>
                             <ul>
                                 <li>Facilitated the development of 10+ students' academic skills in the field of science and technology</li>
@@ -173,7 +173,7 @@
                             </ul>
                         </div>
                         <div class="col-sm-4">
-                            <h5>Baltimore, MD
+                            <h5 class="fontOne">Baltimore, MD
                             </h5>
                             <p  class="summary"> Sept 2016 - May, 2017
                             </p>
@@ -181,7 +181,7 @@
                     </div>
                     <div class="row p-2">
                         <div class="col-sm-8">
-                            <h5>Maryland School for the Blind </h5>
+                            <h5 class="fontOne">Maryland School for the Blind </h5>
                             <p class="summary">Substitute Instructor</p>
                             <ul>
                                 <li></li>
@@ -190,7 +190,7 @@
                             </ul>
                         </div>
                         <div class="col-sm-4">
-                            <h5>Baltimore, MD
+                            <h5 class="fontOne">Baltimore, MD
                             </h5>
                             <p  class="summary"> June 2013 - April, 2014
                             </p>
@@ -198,7 +198,7 @@
                     </div>
                     <div class="row p-2">
                         <div class="col-sm-8">
-                            <h5>Pizza Palace </h5>
+                            <h5 class="fontOne">Pizza Palace </h5>
                             <p class="summary">Shift Leader</p>
                             <ul>
                                 <li>Organized and assigned shift schedule for crew members and drivers</li>
@@ -207,7 +207,7 @@
                             </ul>
                         </div>
                         <div class="col-sm-4">
-                            <h5>Baltimore, MD
+                            <h5 class="fontOne">Baltimore, MD
                             </h5>
                             <p  class="summary"> Aug 2013 - Aug, 2016
                             </p>
