--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
                         <h3 class="fontOne">Education</h3>
                     </div>
                     <div class="col-sm-12 col-md-9 bgColor p-3">
-                        <div class="row p-2">
+                        <div class="row ">
                              <div class="col-sm-8">
                                  <h5 class="fontOne">University of Maryland at Baltimore County </h5>
                                  <p  class="summary">B.S. in Computer Information Systems</p>
@@ -141,11 +141,11 @@
                     </div>
                     <div class="col-sm-12 col-md-9 bgColor p-3">
 
-                            <h5><strong class="fontOne">Programming Languages :</strong> Java, JavaScript, PHP, SQL, PlSQL, C++</h5>
-                            <h5><strong class="fontOne">Software : </strong> Intellij, Git, GitHub, Eclipse, Oracle SQL Developer</h5>
-                            <h5><strong class="fontOne">Design and Graphics : </strong>HTML, CSS, BootStrap, Photoshop, Dreamweaver</h5>
-                            <h5><strong class="fontOne">Musical Instruments : </strong> Guitar, Drum</h5>
-                            <h5><strong class="fontOne"> Multilingual: </strong> English, Nepali, Hindi, Urdu</h5>
+                            <h5><span class="fontOne">Programming Languages :</span></h5> <p class="pl-4">Java, JavaScript, PHP, SQL, PlSQL, C++</p>
+                            <h5><span class="fontOne">Software : </span></h5><p class="pl-4"> Intellij, Git, GitHub, Eclipse, Oracle SQL Developer</p>
+                            <h5><span class="fontOne">Design and Graphics : </span></h5> <p class="pl-4">HTML, CSS, BootStrap, Photoshop, Dreamweaver</p>
+                            <h5><span class="fontOne">Musical Instruments : </span></h5> <p class="pl-4">Guitar, Drum</p>
+                            <h5><span class="fontOne"> Multilingual: </span></h5> <p class="pl-4"> English, Nepali, Hindi, Urdu</p>
 
 
 
