--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
 <div class="container ">
     <!--navigation bar-->
-        <nav class="navbar navbar-expand-lg navbar-dark bg-success">
+        <nav class="navbar navbar-expand-lg navbar-dark bg-success ">
             <a class="navbar-brand fontOne " href="index.html">Portfolio</a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
@@ -21,18 +21,28 @@
             <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav">
                     <li class="nav-item active fontOne">
-                        <a class="nav-link  href="index.html">Home <span class="sr-only">(current)</span></a>
+                        <a class="nav-link " href="index.html"> Home <span class="sr-only">(current)</span></a>
+                    </li>
+
+                    <li class="nav-item fontOne">
+                        <a class="nav-link" href="#edu"> Education</a>
+                    </li>
+
+                    <li class="nav-item fontOne" >
+                        <a class="nav-link" href="#skill" >Skills</a>
                     </li>
                     <li class="nav-item fontOne">
-                        <a class="nav-link" href="https://github.com/kasturipratik" target="_blank">Projects</a>
+                        <a class="nav-link" href="#project" >Projects</a>
                     </li>
                     <li class="nav-item fontOne">
-                        <a class="nav-link" href="https://www.linkedin.com/in/pratikparajuli" target="_blank">Contact</a>
+                        <a class="nav-link" href="#work" >Work Experience</a>
                     </li>
 
                 </ul>
             </div>
+
         </nav>
+
     <!--end of nav bar------------------------------------------->
 
         <div class="container bg-light">
@@ -68,24 +78,9 @@
             <!--contains all major topics-->
             <div class="clearfix"><hr></div>
 
-            <!--start of summary-------------------------------------->
-                <div class=" row bg-light ">
-                    <div class="col-sm-12 col-md-3 p-3" align="center">
-                        <h3>Summary</h3>
-
-                    </div>
-                    <div class="col-sm-12 col-md-9 bgColor  p-3">
-                        <p class="summary">I recently graduated from University of Maryland, Baltimore County with a B.S. degree in Computer
-                            Information Systems. I am training to be a Java Developer through a 10 weeks long Java Development
-                            Boot Camp at Montgomery College Business Training Center.
-                        </p>
-                    </div>
-
-                </div>
-            <div class="clearfix"><hr></div>
 
             <!--start of education------------------------>
-                <div class=" row">
+                <div class=" row" id="edu">
                     <div class="col-sm-12 col-md-3 bg-light p-3" align="center">
                         <h3 class="fontOne">Education</h3>
                     </div>
@@ -134,7 +129,7 @@
                 </div>
             <div class="clearfix"><hr></div>
         <!--start of project ------------------------------>
-                <div class=" row">
+                <div class=" row" id="skill">
                     <div class="col-sm-12 col-md-3 bg-light p-3" align="center" >
                         <h3>Skills</h3>
 
@@ -154,8 +149,31 @@
 
                 </div>
             <div class="clearfix"><hr></div>
+        <!--Start of projects------------------------------------------->
+            <div class=" row" id="project">
+                <div class="col-sm-12 col-md-3 bg-light p-3" align="center" >
+                    <h3>Projects</h3>
+
+                </div>
+                <div class="col-sm-12 col-md-9 bgColor p-3">
+
+                    <h5><span class="fontOne">Easy Connection</span></h5>
+                    <p class="pl-4">Easy Connection is a project developed using PHP, HTML, JAVASCRIPT,CSS and MySQL. Its a project that
+                    allows small businesses to list jobs and applicants can view the jobs and apply with a single button </p>
+
+                    <h5><span class="fontOne">Zork Application </span></h5>
+                    <p class="pl-4">
+                    Zork is developed using Core Java with Object Oriented Methodology. It is a text based game for single user to interact and navigate
+                        inside a house and search for hidden treasure.
+                    </p>
+
+
+                </div>
+
+            </div>
+            <div class="clearfix"><hr></div>
          <!--Start of Work Experience---------------------------------------->
-            <div class=" row mb-4 ">
+            <div class=" row mb-4 " id="work">
 
                 <div class="col-sm-12 col-md-3 bg-light p-3" align="center">
                     <h3>Work Experience</h3>
@@ -169,7 +187,8 @@
                             <ul>
                                 <li>Facilitated the development of 10+ students' academic skills in the field of science and technology</li>
                                 <li>Collaborated with other coaches and school representatives for STEM development</li>
-                                <li>Encouraged students to increase interest in STEM education through practical lab</li>
+                                <li>Encouraged students to increase interest in STEM education through practical teachings</li>
+
                             </ul>
                         </div>
                         <div class="col-sm-4">
@@ -183,10 +202,12 @@
                         <div class="col-sm-8">
                             <h5 class="fontOne">Maryland School for the Blind </h5>
                             <p class="summary">Substitute Instructor</p>
-                            <ul>
-                                <li></li>
-                                <li>Collaborated with other coaches and school representatives for STEM development</li>
-                                <li>Encouraged students to increase interest in STEM education through practical lab</li>
+                            <ul>     <li> Participated in the development, review and evaluation of individualized educational
+                                plans including writing goals, data collection, reporting on progress, and attending IEP meetings.</li>
+                                <li>Engaged with 2 visually impaired students to learn and develop basic life skills like eating, cleaning, making bed, closets , e.t.t.</li>
+
+                                <li>Conducted evaluations and assessments to determine child's developmental status</li>
+                                <li> Managed student resources.</li>
                             </ul>
                         </div>
                         <div class="col-sm-4">
@@ -202,8 +223,10 @@
                             <p class="summary">Shift Leader</p>
                             <ul>
                                 <li>Organized and assigned shift schedule for crew members and drivers</li>
-                                <li>Collaborated with other coaches and school representatives for STEM development</li>
-                                <li>Encouraged students to increase interest in STEM education through practical lab</li>
+                                <li>Verified all the order, customer requests, and prepared the orders quickly .</li>
+                                <li>Solved customer complaints and issues effectively and retained the customer business.</li>
+                                <li>Managed food inventory and created ticket for low inventory items </li>
+                                <li>Adopted quickly in a fast-paced and physically demanding environment</li>
                             </ul>
                         </div>
                         <div class="col-sm-4">
