added project links

--- a/index.html
+++ b/index.html
@@ -33,13 +33,22 @@
                         <a class="nav-link" href="#skill" >Skills</a>
                     </li>
                     <li class="nav-item fontOne">
-                        <a class="nav-link" href="#project" >Projects</a>
-                    </li>
-                    <li class="nav-item fontOne">
                         <a class="nav-link" href="#work" >Work Experience</a>
                     </li>
-
+                    <li class="nav-item dropdown fontOne">
+                        <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                            Projects
+                        </a>
+                        <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+                            <a class="dropdown-item" href="https://job-web-pages.herokuapp.com/index.html" target="_blank">Job Application</a>
+                            <div class="dropdown-divider"></div>
+                            <a class="dropdown-item" href="https://bootcamp-my-recipe-books.herokuapp.com" target="_blank">Recipe Book</a>
+                            <div class="dropdown-divider"></div>
+                            <a class="dropdown-item" href="https://immense-badlands-31008.herokuapp.com" target="_blank">Meme Application</a>
+                        </div>
+                    </li>
                 </ul>
+
             </div>
 
         </nav>
@@ -129,7 +138,7 @@
                     </div>
                 </div>
             <div class="clearfix"><hr></div>
-        <!--start of project ------------------------------>
+        <!--start of skills ------------------------------>
                 <div class=" row" >
                     <div class="col-sm-12 col-md-3 bg-light p-3" align="center" >
                         <h3>Skills</h3>
@@ -153,18 +162,31 @@
                     <h3>Projects</h3>
 
                 </div>
-                <div class="col-sm-12 col-md-9 bgColor p-3">
+                <div class="col-sm-12 col-md-9 bgColor ">
 
-                    <h5><span class="fontOne">Easy Connection</span></h5>
-                    <p class="pl-4">Easy Connection is a project developed using PHP, HTML, JAVASCRIPT,CSS and MySQL. Its a project that
-                    allows small businesses to list jobs and applicants can view the jobs and apply with a single button </p>
-
-                    <h5><span class="fontOne">Zork Application </span></h5>
-                    <p class="pl-4" id="work">
-                    Zork is developed using Core Java with Object Oriented Methodology. It is a text based game for single user to interact and navigate
-                        inside a house and search for hidden treasure.
-                    </p>
-
+                    <div class="row">
+                        <div class="col-sm-12 col-md-4 hoverOver p-3">
+                            <a href="https://job-web-pages.herokuapp.com/index.html" target="_blank">
+                                <div class="projectLinks">
+                                     <h3>Job Aplication</h3>
+                                </div>
+                            </a>
+                        </div>
+                        <div class="col-sm-12 col-md-4   hoverOver  p-3">
+                            <a href="https://bootcamp-my-recipe-books.herokuapp.com" target="_blank">
+                                <div class="projectLinks">
+                                    <h3>Recipe Book</h3>
+                                </div>
+                            </a>
+                        </div>
+                        <div class="col-sm-12 col-md-4 hoverOver p-3">
+                            <a href="https://immense-badlands-31008.herokuapp.com" target="_blank">
+                                <div class="projectLinks">
+                                    <h3>Meme Application</h3>
+                                </div>
+                            </a>
+                        </div>
+                    </div>
 
                 </div>
 
