--- a/index.html
+++ b/index.html
@@ -45,6 +45,8 @@
                             <a class="dropdown-item" href="https://bootcamp-my-recipe-books.herokuapp.com" target="_blank">Recipe Book</a>
                             <div class="dropdown-divider"></div>
                             <a class="dropdown-item" href="https://immense-badlands-31008.herokuapp.com" target="_blank">Meme Application</a>
+                            <div class="dropdown-divider"></div>
+                            <a class="dropdown-item" href="https://tranquil-brook-51120.herokuapp.com" target="_blank">Car Dealership Application</a>
                         </div>
                     </li>
                 </ul>
