added programming experience

--- a/index.html
+++ b/index.html
@@ -148,7 +148,8 @@
                     </div>
                     <div class="col-sm-12 col-md-9 bgColor p-3">
 
-                            <h5><span class="fontOne">Programming Languages :</span></h5> <p class="pl-4">Java, JavaScript, PHP, SQL, PlSQL, C++</p>
+                            <h5><span class="fontOne">Programming Languages :</span></h5> <p class="pl-4">Java, JavaScript, PHP, SQL, PlSQL, SprintBoot, Hibernate,
+                         JDBC, Thymeleaf</p>
                             <h5><span class="fontOne">Software : </span></h5><p class="pl-4"> Intellij, Git, GitHub, Eclipse, Oracle SQL Developer</p>
                             <h5><span class="fontOne">Design and Graphics : </span></h5> <p class="pl-4">HTML, CSS, BootStrap, Photoshop, Dreamweaver</p>
                             <h5><span class="fontOne">Musical Instruments : </span></h5> <p class="pl-4">Guitar, Drum</p>
@@ -194,6 +195,40 @@
 
             </div>
             <div ><hr></div>
+            <!--Programming Experience---------------------------------------------->
+            <div class=" row" >
+                <div class="col-sm-12 col-md-3 bg-light p-3" align="center" >
+                    <h3>Programming Experience</h3>
+
+                </div>
+                <div class="col-sm-12 col-md-9 bgColor ">
+
+                    <div class="row p-2">
+                        <div class="col-sm-8">
+                            <h5 class="fontOne">Montgomery Business Training Center </h5>
+                            <p class="summary">Java Application Developer</p>
+                            <ul>
+                                <li>Developed Java based web applications using Spring Boot framework and Thymeleaf template engine.</li>
+                              <li>Collaborated with a team on Github to create web application using version control.</li>
+                                <li>Deployed web application on Heroku cloud application platform.</li>
+                                <li>Worked in a team to evaluate, inspect and debug codes written by other programmers for quality
+                                    assurance and code efficiency.</li>
+                                <li>HTML, CSS, JavaScript, JQuery, MySQL, Java, Spring Boot, Thymeleaf, Git, GitHub, Heroku, and
+                                    Cloudinary were used to build and deploy java web application.</li>
+                            </ul>
+                        </div>
+                        <div class="col-sm-4">
+                            <h5 class="fontOne">Gaithersburg, MD
+                            </h5>
+                            <p  class="summary"> May 2018 - August, 2018
+                            </p>
+                        </div>
+                    </div>
+
+                </div>
+
+            </div>
+            <div ><hr></div>
          <!--Start of Work Experience---------------------------------------->
             <div class=" row mb-4 ">
 
@@ -210,7 +245,8 @@
                                 <li>Facilitated the development of 10+ students' academic skills in the field of science and technology</li>
                                 <li>Collaborated with other coaches and school representatives for STEM development</li>
                                 <li>Encouraged students to increase interest in STEM education through practical teachings</li>
-
+                                <li>Worked directly with the BRC administration and the School Representative to make sure that the
+                                    required skill sets are taught</li>
                             </ul>
                         </div>
                         <div class="col-sm-4">
