--- a/index.html
+++ b/index.html
@@ -47,6 +47,8 @@
                             <a class="dropdown-item" href="https://immense-badlands-31008.herokuapp.com" target="_blank">Meme Application</a>
                             <div class="dropdown-divider"></div>
                             <a class="dropdown-item" href="https://tranquil-brook-51120.herokuapp.com" target="_blank">Car Dealership Application</a>
+                            <div class="dropdown-divider"></div>
+                            <a class="dropdown-item" href="https://ancient-lowlands-91724.herokuapp.com" target="_blank">Fruit Vendor Application</a>
                         </div>
                     </li>
                 </ul>
@@ -168,21 +170,28 @@
                 <div class="col-sm-12 col-md-9 bgColor ">
 
                     <div class="row">
-                        <div class="col-sm-12 col-md-4 hoverOver p-3">
+                        <div class="col-sm-12 col-md-3 hoverOver p-3">
                             <a href="https://job-web-pages.herokuapp.com/index.html" target="_blank">
                                 <div class="projectLinks">
                                      <h3>Job Aplication</h3>
                                 </div>
                             </a>
                         </div>
-                        <div class="col-sm-12 col-md-4   hoverOver  p-3">
+                        <div class="col-sm-12 col-md-3 hoverOver p-3">
+                            <a href="https://ancient-lowlands-91724.herokuapp.com/" target="_blank">
+                                <div class="projectLinks">
+                                    <h3>Fruit Vendor Application</h3>
+                                </div>
+                            </a>
+                        </div>
+                        <div class="col-sm-12 col-md-3   hoverOver  p-3">
                             <a href="https://bootcamp-my-recipe-books.herokuapp.com" target="_blank">
                                 <div class="projectLinks">
                                     <h3>Recipe Book</h3>
                                 </div>
                             </a>
                         </div>
-                        <div class="col-sm-12 col-md-4 hoverOver p-3">
+                        <div class="col-sm-12 col-md-3 hoverOver p-3">
                             <a href="https://immense-badlands-31008.herokuapp.com" target="_blank">
                                 <div class="projectLinks">
                                     <h3 id="work">Meme Application</h3>
