Updated spelling errors

--- a/index.html
+++ b/index.html
@@ -122,14 +122,14 @@
                                 <h5 class="fontOne"> Gaithersburg, MD
 
                                 </h5>
-                                <p  class="summary">    Expected ( 25 July 2018)
+                                <p  class="summary">    03 Aug 2018
 
                                 </p>
                             </div>
                         </div>
                         <div class="row   ">
                             <div class="col-sm-8">
-                                <h5 class="fontOne">Community College Of baltimore County </h5>
+                                <h5 class="fontOne">Community College Of Baltimore County </h5>
                                 <p  class="summary">Computer Science</p>
                             </div>
                             <div class="col-sm-4">
@@ -150,7 +150,7 @@
                     </div>
                     <div class="col-sm-12 col-md-9 bgColor p-3">
 
-                            <h5><span class="fontOne">Programming Languages :</span></h5> <p class="pl-4">Java, JavaScript, PHP, SQL, PlSQL, SprintBoot, Hibernate,
+                            <h5><span class="fontOne">Programming Languages :</span></h5> <p class="pl-4">Java, JavaScript, PHP, SQL, PlSQL, SpringBoot, Hibernate,
                          JDBC, Thymeleaf</p>
                             <h5><span class="fontOne">Software : </span></h5><p class="pl-4"> Intellij, Git, GitHub, Eclipse, Oracle SQL Developer</p>
                             <h5><span class="fontOne">Design and Graphics : </span></h5> <p class="pl-4">HTML, CSS, BootStrap, Photoshop, Dreamweaver</p>
